amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 5

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-inheritance
  Message: Type 'MyObject' cannot implement non-interface type 'MyEnum'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.graphql#/declares/shape/MyObject
  Property: http://a.ml/vocabularies/shapes#inherits
  Range: [(26,0)-(28,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-inheritance
  Message: Type 'MyObject' cannot implement non-interface type 'MyInput'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.graphql#/declares/shape/MyObject
  Property: http://a.ml/vocabularies/shapes#inherits
  Range: [(26,0)-(28,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-inheritance
  Message: Type 'MyObject' cannot implement non-interface type 'MyScalar'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.graphql#/declares/shape/MyObject
  Property: http://a.ml/vocabularies/shapes#inherits
  Range: [(26,0)-(28,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-inheritance
  Message: Type 'MyObject' cannot implement non-interface type 'MyUnion'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.graphql#/declares/shape/MyObject
  Property: http://a.ml/vocabularies/shapes#inherits
  Range: [(26,0)-(28,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/core#unresolved-reference
  Message: Unresolved reference 'MyUnresolved'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.graphql#/declares/shape/MyObject/inherits/unresolved
  Property: 
  Range: [(26,65)-(26,77)]
  Location: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-implements.api.graphql
